<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Activites.RegisterActivity"
    android:background="@drawable/newbackground"
    >

    <!-- Text View informing user on how to add a profile page   -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:text="Tap on the icon below to add a profile image">
    </TextView>


    <!-- Image View storing user profile image  -->
    <ImageView
        android:id="@+id/regUserPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/userphoto"
        android:layout_marginTop="50dp">
    </ImageView>


    <!-- Field for entering user full name   -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/hintColour"
        android:layout_marginTop="40dp"
        >

        <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Field for entering user email   -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/hintColour"
        >

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email Address"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Field for entering user password   -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/hintColour"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Field for entering user password   -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/hintColour"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/regPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Button for entering registration details   -->
    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"
        android:textAllCaps="false"
        >
    </Button>


    <!-- Progress bar after completing registration form   -->
    <ProgressBar
        android:id="@+id/progressBarReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="@+id/regBtn"
        app:layout_constraintStart_toStartOf="@+id/regBtn"
        app:layout_constraintTop_toTopOf="@+id/regBtn">
    </ProgressBar>


    <!-- Text View for taking user to login page   -->
    <TextView
        android:id="@+id/textClickHereLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Already registered? Click here"
        android:layout_marginLeft="65dp"
        android:textColor="@color/white">
    </TextView>



</LinearLayout>
